[gd_scene load_steps=14 format=3 uid="uid://cn0rp30devw6m"]

[ext_resource type="Texture2D" uid="uid://dt8ju8vspnib" path="res://ArtAssets/Environment/candle.png" id="1_a3eqh"]
[ext_resource type="Script" path="res://Scripts/candle.gd" id="1_x8err"]
[ext_resource type="Texture2D" uid="uid://1vg2qw4odvfq" path="res://ArtAssets/lightmap.png" id="3_dejo8"]
[ext_resource type="PackedScene" uid="uid://5s0v8c2hbcf5" path="res://Scenes/heat_disortion.tscn" id="4_1jc4y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3pm15"]

[sub_resource type="AtlasTexture" id="AtlasTexture_snntj"]
atlas = ExtResource("1_a3eqh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxxf1"]
atlas = ExtResource("1_a3eqh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c3rm"]
atlas = ExtResource("1_a3eqh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6mxr"]
atlas = ExtResource("1_a3eqh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n580"]
atlas = ExtResource("1_a3eqh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2v1v6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snntj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxxf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c3rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6mxr")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n580")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h76jh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b5uej"]
radius = 66.0076

[node name="Candle" type="Node2D" groups=["Candle"]]
z_index = 1
script = ExtResource("1_x8err")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_3pm15")

[node name="CandleSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2v1v6")
animation = &"fire"

[node name="PointLight2D" type="PointLight2D" parent="."]
material = SubResource("ShaderMaterial_h76jh")
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("3_dejo8")
texture_scale = 4.0

[node name="DamageArea" type="Area2D" parent="PointLight2D"]
position = Vector2(-9, 3)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointLight2D/DamageArea"]
position = Vector2(9, -3)
shape = SubResource("CircleShape2D_b5uej")

[node name="HeatDisortion" parent="." instance=ExtResource("4_1jc4y")]
visible = false
position = Vector2(0, 5.36442e-06)
scale = Vector2(122.138, 118)

[connection signal="input_event" from="InteractArea" to="." method="_on_interact_area_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_interact_area_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_interact_area_mouse_exited"]
[connection signal="body_entered" from="PointLight2D/DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="PointLight2D/DamageArea" to="." method="_on_damage_area_body_exited"]
